2004-10-14  David Schleef  <ds@schleef.org>

	* configure.ac: update for swfdec-0.3 and liboil-0.2
	* ext/swfdec/gstswfdec.c: update for swfdec-0.3
	* ext/swfdec/gstswfdec.h: same
	* gst/videofilter/gstvideobalance.c: update for liboil-0.2
	* gst/videotestsrc/videotestsrc.c: same

2004-10-14  Wim Taymans  <wim@fluendo.com>

	* gst/tcp/gstmultifdsink.c: (gst_multifdsink_add),
	(gst_multifdsink_remove), (gst_multifdsink_remove_client_link),
	(is_sync_frame), (gst_multifdsink_new_client),
	(gst_multifdsink_handle_client_write),
	(gst_multifdsink_recover_client), (gst_multifdsink_queue_buffer),
	(gst_multifdsink_handle_clients), (gst_multifdsink_change_state):
	Turn warnings into info.
	Don't allow a state change in the streaming thread.

2004-10-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/vorbis/oggvorbisenc.c:
	* ext/vorbis/vorbisdec.c:
	  fix template sample rate

2004-10-13  Wim Taymans  <wim@fluendo.com>

	* ext/mad/gstmad.c: (gst_mad_check_caps_reset), (gst_mad_chain):
	Decoding the header first fixes some problems in resyncing
	in more mp3s.

2004-10-12  Wim Taymans  <wim@fluendo.com>

	* gst/playback/gstplaybin.c: (gen_video_element),
	(gen_vis_element), (remove_sinks), (setup_sinks):
	Added vis plugin support, need to configure the vis
	element to activate it.

2004-10-12  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* ext/gnomevfs/gstgnomevfssrc.c: (gst_gnomevfssrc_get),
	(gst_gnomevfssrc_srcpad_query), (gst_gnomevfssrc_srcpad_event):
	  Some debug.
	* gst/avi/gstavidemux.c: (gst_avi_demux_reset),
	(gst_avi_demux_handle_src_event), (gst_avi_demux_read_superindex),
	(gst_avi_demux_read_subindexes), (gst_avi_demux_add_stream),
	(gst_avi_demux_stream_index), (gst_avi_demux_skip),
	(gst_avi_demux_sync), (gst_avi_demux_stream_scan),
	(gst_avi_demux_massage_index), (gst_avi_demux_stream_header):
	* gst/avi/gstavidemux.h:
	  Support for openDML-2.0 indx/ix## chunks. Support for broken index